infraascode/k8s/toilet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toilet
  labels:
    app: toilet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: toilet
  template:
    metadata:
        labels:
            app: toilet
    spec:
      containers:
        - name: toilet
          image: andrelucastic/toilet-near-me-java:1.2.2
          imagePullPolicy: Always
          ports:
              - containerPort: 8181
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8181
          resources:
            requests:
              memory: "400Mi"
              cpu: "200m"
            limits:
              memory: "800Mi"
              cpu: "500m"
