infraascode/k8s/toilet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toilet
  annotations:
    konghq.com/plugins: prometheus
    ingress.kubernetes.io/service-upstream : "true"
  labels:
    app: toilet
    interface: rest
    language: java

spec:
  ports:
    - name: http
      port: 8181
      targetPort: 8181
      protocol: TCP
  selector:
    app: toilet
