infraascode/k8s/toilet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toilet-api
  annotations:
    konghq.com/override: do-not-preserve-host
    konghq.com/plugins: toilet-rate-limit,prometheus
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: toilet
                port:
                  number: 8181
            pathType: Prefix
            path: /
